--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Andy Savage <andy@savage.hk>",
   "license": "MIT",
   "dependencies": {
+    "bitwise-xor": "0.0.0",
     "serialport": "^4.0.1",
     "uint-js": "0.0.4",
     "underscore": "^1.8.3"
